PRoject2/force-app/main/default/objects/User_Prediction__c/User_Prediction__c.object-meta.xml
<CustomObject>
    <label>User Prediction</label>
    <nameField>
        <label>User Prediction</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Predictions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>