PRoject2/force-app/main/default/objects/User_Prediction__c/fields/Confidence_Rating__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Rating__c</fullName>
    <description>How sure are you?</description>
    <label>Confidence Rating</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>