PRoject2/force-app/main/default/objects/User_Prediction__c/fields/Expected_Percentage_Growth__c.field-meta.xml
<CustomField>
    <fullName>Expected_Percentage_Growth__c</fullName>
    <label>Expected Percentage Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>