PRoject2/force-app/main/default/objects/User_Prediction__c/fields/Price_Target__c.field-meta.xml
<CustomField>
    <fullName>Price_Target__c</fullName>
    <description>What is you price prediction.</description>
    <label>Price Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>