PRoject2/force-app/main/default/objects/User_Prediction__c/fields/Price_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Price_Target_Date__c</fullName>
    <description>When will your price target happen?</description>
    <label>Price Target Date</label>
    <type>Date</type>
</CustomField>