PRoject2/force-app/main/default/objects/User_Prediction__c/fields/Short__c.field-meta.xml
<CustomField>
    <fullName>Short__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The stock will drop in price.</description>
    <label>Short</label>
    <type>Checkbox</type>
</CustomField>