PRoject2/force-app/main/default/objects/User_Prediction__c/fields/Ticker_Symbol_del__c.field-meta.xml
<CustomField>
    <fullName>Ticker_Symbol_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stock&apos;s Tiker Symbol</description>
    <label>Tiker Symbol</label>
    <referenceTo>Community_Prediction__c</referenceTo>
    <relationshipLabel>User Predictions</relationshipLabel>
    <relationshipName>User_Predictions_del</relationshipName>
    <type>Lookup</type>
</CustomField>