PRoject2/force-app/main/default/objects/User_Prediction__c/recordTypes/CommunityPage.recordType-meta.xml
<RecordType>
    <fullName>CommunityPage</fullName>
    <active>true</active>
    <label>CommunityPage</label>
</RecordType>