PRoject2/force-app/main/default/objects/User_Prediction__c/validationRules/Confidence_percent_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Confidence_percent_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>Confidence_Rating__c &gt; 1.1</errorConditionFormula>
    <errorDisplayField>Confidence_Rating__c</errorDisplayField>
    <errorMessage>Cannot Go Over 110%</errorMessage>
</ValidationRule>