PRoject2/force-app/main/default/objects/User_Prediction__c/validationRules/PriceShortdecisionEvaluation.validationRule-meta.xml
<ValidationRule>
    <fullName>PriceShortdecisionEvaluation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(Short__c ,Current_Price__c &lt; Price_Target__c ),  AND(NOT(Short__c) ,Current_Price__c &gt; Price_Target__c ))</errorConditionFormula>
    <errorDisplayField>Price_Target__c</errorDisplayField>
    <errorMessage>Price target does not match Long/Short decision feild.</errorMessage>
</ValidationRule>